# PAI-App

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
config/: default.yaml  ui.yaml
config/providers/: openai.yaml
src/pai/: bootstrap.py  cli.py  config.py  config_loader.py
src/pai/core/: chatSession.py  chat_session.py  context.py  errors.py  ports.py
src/pai/prompts/: system.txt
src/pai/providers/: echo.py  openai.py  openai_adapter.py  param_policy.py  registry.py
src/pai/resilience/: resilient_provider.py
src/pai/secrets/: sources.py
src/pai/storage/: transcript.py
src/pai/ui/: banner.py  ui_config.py
src/pai/utils/: secrets.py
src/pai/web/: __init__.py  app.py  index.html
src/pai/web/static/: app.js  styles.css
tests/unit/: test_bootstrap.py  test_bootstrap_param_policy.py  test_chat_session.py  test_cli.py  test_config_loader.py  test_context_management.py  test_openai_adapter.py  test_param_policy.py  test_registry.py  test_resilient_provider.py  test_secrets_sources.py  test_transcript.py  test_ui_banner.py
